--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,8 @@
 .recharts-tooltip-item {
     @apply text-base font-medium !text-blue-500 dark:!text-blue-600;
 }
+
+
+.course-card {
+    border: 1px solid #3b82f6;
+}
